# heartlib

./: .gitignore  COMPLETE_OPTIMIZATION_SUMMARY.md  HELP_GUIDES.md  PERFORMANCE_OPTIMIZATION.md  README.md  WEBUI_GUIDE.md  XPU_GUIDE.MD  download_models.py  lauch_webui_llm.sh  launch_webui.sh  pyproject.toml  requirements-xpu.txt  requirements.txt  run.sh  run_optimized.sh  transcribe.sh  transcribe_optimized.sh  validate_xpu_setup.py  webui.py  webui_llm.py  xpu_music_gen.py  xpu_transcribe.py
assets/: tags.txt
examples/: run_llm_generator.py
inputs/lyrics/: default.txt  echoes.txt
inputs/tags/: default.txt  sad_mood.txt
output/: echoes_of_silence.json
src/heartlib/llm/: generator.py
src/heartlib/pipelines/: lyrics_transcription.py  music_generation.py
